# Hydra-ROS

./: .gitignore  README.md
hydra_ros/: CMakeLists.txt  hydra_utils_cmake  package.xml  setup.py
hydra_ros/app/: hydra_node.cpp  reconstruct_mesh.cpp  scene_graph_logger_node.cpp
hydra_ros/cfg/: Colormap.cfg  DynamicLayerVisualizer.cfg  GvdVisualizer.cfg  LayerVisualizer.cfg  Visualizer.cfg
hydra_ros/cmake/: hydra_ros_build_config.h.in
hydra_ros/config/: gvd_places_sinks.yaml  hydra_ros_visualizer_plugins.yaml  mesh_segmenter_sinks.yaml  places_visualization_config.yaml  reconstruction_sinks.yaml  reconstruction_visualization_config.yaml  ros_pipeline.yaml  visualizer_config.yaml  visualizer_plugins.yaml
hydra_ros/config/color/: ade20k_indoor.csv  ade20k_mit.csv  ade20k_outdoor.csv  phoenix.csv  uhumans2_office.csv
hydra_ros/config/datasets/: kimera_multi_ouster64.yaml  kimera_multi_rgbd.yaml  kimera_multi_velodyne16.yaml  kitti_360.yaml  lis_spot.yaml  lis_spot_pipeline.yaml  penn_quad.yaml  phoenix.yaml  phoenix_lidar.yaml  sidpac.yaml  simmons_a1.yaml  simmons_jackal.yaml  uhumans2.yaml
hydra_ros/config/hydra_visualizer/: buildings_layer.yaml  objects_layer.yaml  outdoor_places_layer.yaml  places_layer.yaml  rooms_layer.yaml
hydra_ros/config/pipelines/: default.yaml  lis_spot.yaml
hydra_ros/config/sensors/: warty_phoenix_lidar.yaml
hydra_ros/include/hydra_ros/: hydra_ros_pipeline.h
hydra_ros/launch/: hydra.launch  hydra_robot.launch  hydra_robot_t265.launch  pipeline_config.launch
hydra_ros/launch/archive/: castle_island.launch  outdoor_jackal.launch
hydra_ros/launch/datasets/: castle_island.launch  kimera_multi.launch  kitti_360.launch  lis_spot.launch  mp3d.launch  outdoor_jackal.launch  penn_quad.launch  phoenix.launch  sidpac.launch  simmons_a1.launch  simmons_jackal.launch  uhumans2.launch
hydra_ros/launch/places/: hydra_topology.launch  hydra_topology_simmons_jackal.launch
hydra_ros/launch/reconstruction/: hydra_reconstruction.launch  hydra_reconstruction_sidpac.launch  hydra_reconstruction_uhumans2.launch
hydra_ros/launch/sources/: a1_pointcloud.launch  jackal_pointcloud.launch  penn_pointcloud.launch  phoenix_pointcloud.launch  sidpac_pointcloud.launch  uhumans2_pointcloud.launch
hydra_ros/launch/static_tfs/: a1_t265_static_tfs.xml  enyo_static_tfs.xml  lis_spot_tfs.xml  pennquad_static_tfs.xml
hydra_ros/launch/utils/: dsg_optimizer.launch  hydra_streaming_visualizer.launch  odom_to_tf.launch  publish_rotation_transform.launch  robot_gt_pose.launch  scene_graph_logger.launch
hydra_ros/launch/visualizer/: hydra_rviz.launch  hydra_streaming_visualizer.launch  hydra_visualizer.launch
hydra_ros/rviz/: a1.rviz  enyo.rviz  hydra_streaming_visualizer.rviz  hydra_visualizer.rviz  kimera_multi_acl_jackal2.rviz  kitti_360.rviz  penn_quad.rviz  phoenix.rviz  sidpac.rviz  sparkal1.rviz  sparkal2.rviz  uhumans2.rviz
hydra_ros/scripts/: copy_static_tfs.py  dump_bag_odom.py  prep_sparkal_dataset.py
hydra_ros/src/: hydra_ros_pipeline.cpp
hydra_ros/src/active_window/: reconstruction_visualizer.cpp  tsdf_occupancy_publisher.cpp
hydra_ros/src/backend/: ros_backend.cpp  ros_backend_publisher.cpp
hydra_ros/src/common/: hydra_ros_pipeline.cpp  ros_input_module.cpp
hydra_ros/src/frontend/: gvd_occupancy_publisher.cpp  gvd_visualization_utilities.cpp  object_visualizer.cpp  places_visualizer.cpp  ros_frontend.cpp  ros_frontend_publisher.cpp
hydra_ros/src/hydra_ros/: __init__.py
hydra_ros/src/input/: feature_receiver.cpp  image_receiver.cpp  pointcloud_adaptor.cpp  pointcloud_receiver.cpp  ros_data_receiver.cpp  ros_input_module.cpp  ros_sensors.cpp
hydra_ros/src/loop_closure/: ros_lcd_registration.cpp
hydra_ros/src/nodes/: dsg_optimizer_node.cpp  gvd_validator_node.cpp  hydra_node.cpp  hydra_reconstruction_node.cpp  hydra_topology_node.cpp  hydra_visualizer_node.cpp  mesh_publisher_node.cpp  rotate_tf_node.cpp  scene_graph_logger_node.cpp
hydra_ros/src/odometry/: ros_pose_graph_tracker.cpp
hydra_ros/src/openset/: ros_embedding_group.cpp
hydra_ros/src/pipeline/: hydra_ros_pipeline.cpp  ros_backend.cpp  ros_backend_publisher.cpp  ros_frontend.cpp  ros_frontend_publisher.cpp  ros_lcd_registration.cpp  ros_reconstruction.cpp  ros_reconstruction_config.cpp  ros_reconstruction_publisher.cpp
hydra_ros/src/reconstruction/: data_receiver.cpp  image_receiver.cpp  pointcloud_adaptor.cpp  pointcloud_receiver.cpp  reconstruction_visualizer.cpp  ros_reconstruction.cpp  ros_reconstruction_config.cpp  ros_reconstruction_publisher.cpp  ros_sensors.cpp
hydra_ros/src/utils/: bag_reader.cpp  bow_subscriber.cpp  dsg_streaming_interface.cpp  ear_clipping.cpp  external_loop_closure_subscriber.cpp  image_color_adaptor.cpp  image_depth_adaptor.cpp  image_label_adaptor.cpp  image_receiver.cpp  image_to_pointcloud.cpp  input_data_to_messages.cpp  lookup_tf.cpp  node_handle_factory.cpp  node_utilities.cpp  occupancy_publisher.cpp  pointcloud_adaptor.cpp  pose_cache.cpp  scene_graph_logger.cpp  tf_lookup.cpp
hydra_ros/src/visualizer/: basis_point_plugin.cpp  colormap_utilities.cpp  config_manager.cpp  dynamic_scene_graph_visualizer.cpp  feature_color_adaptors.cpp  footprint_plugin.cpp  graph_color_adaptors.cpp  graph_wrappers.cpp  gt_region_plugin.cpp  gvd_visualization_utilities.cpp  hydra_visualizer.cpp  marker_group_pub.cpp  (+12 more)
hydra_ros/tests/: CMakeLists.txt  hydra_ros.test  main.cpp  test_ear_clipping.cpp  test_image_to_pointcloud.cpp  test_pointcloud_adaptor.cpp  test_ros_sensors.cpp
hydra_visualizer/: CMakeLists.txt  package.xml
hydra_visualizer/app/: hydra_visualizer_node.cpp
hydra_visualizer/cfg/: DynamicLayerVisualizer.cfg  LayerVisualizer.cfg  Visualizer.cfg
hydra_visualizer/config/: external_plugins.yaml  visualizer_config.yaml  visualizer_plugins.yaml
hydra_visualizer/launch/: hydra_region_publisher.launch  hydra_rviz.launch  hydra_streaming_visualizer.launch  hydra_visualizer.launch
hydra_visualizer/rviz/: hydra_visualizer.rviz
hydra_visualizer/src/: dsg_visualizer.cpp  scene_graph_renderer.cpp
hydra_visualizer/tests/: main.cpp
(+146 files in other folders)
