<?xml version="1.0"?>
<package format="2">
  <name>hydra_ros</name>
  <version>1.0.0</version>
  <description>hydra ros nodes</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <author email="yunchang@mit.edu">Yun Chang</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>hydra</depend>
  <depend>hydra_msgs</depend>
  <depend>image_transport</depend>
  <depend>kimera_pgmo</depend>
  <depend>pcl_ros</depend>
  <depend>pose_graph_tools</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>voxblox_ros</depend>

  <depend>nodelet</depend>

  <exec_depend>image_proc</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>kimera_semantics_ros</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
      <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
