<?xml version="1.0"?>
<package format="2">
  <name>hydra_ros</name>
  <version>1.0.0</version>
  <description>hydra ros nodes</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <author email="yunchang@mit.edu">Yun Chang</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>hydra</depend>
  <depend>hydra_msgs</depend>
  <depend>image_transport</depend>
  <depend>kimera_pgmo_ros</depend>
  <depend>kimera_pgmo_msgs</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>

  <depend>pose_graph_tools_ros</depend>
  <depend>pose_graph_tools_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>image_proc</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>kimera_pgmo_rviz</exec_depend>

  <export>
  </export>

</package>
