<?xml version="1.0"?>
<package format="2">
  <name>hydra_visualizer</name>
  <version>1.0.0</version>
  <description>hydra visualization utilities</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <author email="yunchang@mit.edu">Yun Chang</author>
  <author email="lschmid@mit.edu">Lukas Schmid</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>config_utilities</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>hydra_msgs</depend>
  <depend>kimera_pgmo_msgs</depend>
  <depend>roscpp</depend>
  <depend>spark_dsg</depend>
  <depend>std_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>kimera_pgmo_rviz</exec_depend>

  <export>
  </export>

</package>
